Correction flex order sur version mobile dans la section activité

--- a/style.css
+++ b/style.css
@@ -898,6 +898,7 @@ h6{
         .container-activite-big{
             width: 90%;
             height: 25%;
+            order: 2;
 
         }
 
